// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected (className/noFollow) 1`] = `
<a
  className="test"
  rel="noopener noreferrer nofollow"
>
  test
</a>
`;

exports[`renders as expected (simple) 1`] = `
<a
  className=""
  rel="noopener noreferrer "
>
  test
</a>
`;
